data/derived/fa15/progs/unify/prog0265.ml.out
Characters 31-37:
  let stringOfList f l = List.map(f, l);;
                                 ^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'd
